# python_ci_uv

./: README.md  README_with_uv.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
src/: app.py  app.txt
src/python_ci_uv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
